<resources>
    <string name="app_name">RN Tours &amp; Travels</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">New User</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email </string>
    <string name="travel_id">Travel Id</string>
    <string name="sign_in_txt">Sign in to RN Tours &amp; Travels Pvt. Ltd.</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="sign_up"> Not a RN user?  Sign up</string>
    <string name="firstname">First Name </string>
    <string name="lastname">Last Name </string>
    <string name="upcoming">Past</string>
    <string name="ongoing_past">Active</string>
    <string name="following">Following</string>

    <string name="rn_corporate_address">F-11, A/K-316, First Floor,\nMB Road, Lado Sarai,\nNew Delhi -110030, INDIA</string>
    <string name="itinerary">Trip Itinerary</string>
    <string name="hotel_voucher">Travel Vouchers</string>
    <string name="ticket_details">Flight Tickets</string>
    <string name="rn_helpline">Contact us</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="mobile">Mobile</string>
    <string name="landline">Landline</string>
    <string name="rn_email_id">info@rntravels.in</string>
    <string name="rn_landline">+91-011-41633368\n+91-011-41733368</string>
    <string name="rn_mobile">+91-9811033368</string>
    <string name="corporate_off">Corporate Office</string>
    <string name="ticket">Ticket</string>
    <string name="feedback">Feedback</string>
    <string name="website">Website</string>
    <string name="web_url">WWW.RNTRAVELS.IN\nWWW.WORLDWINETRAILS.COM</string>
    <string name="notification">Notification Setting</string>
    <string name="chnagePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="tour_contact_person">Tour Contact Person</string>
    <string name="cab_contact_person">Cab Contact Person</string>
    <string name="leave_feedback">Write your feedback...</string>
    <string name="boardingPass">Boarding Pass</string>

    <string-array name="drawer_list">
        <item>Trips</item>
        <item>Contact Info</item>
        <item>Notification</item>
        <item>Password</item>
        <item>Profile</item>
        <item>Forex Rates</item>
        <item>Google Translate</item>
        <item>Logout</item>

    </string-array>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="cab_detail">Cab Details</string>

    <string name="facebook_app_id">411263559336773</string>
    <string name="fb_login_protocol_scheme">fb411263559336773</string>
    <string name="submit">Submit</string>
    <string name="phone_num">Phone number</string>
    <string name="no_upload">No record available.</string>
    <!--import com.facebook.FacebookSdk;
    import com.facebook.appevents.AppEventsLogger;-->

    <string name="already_reg">This email account is already associated with one of the registered account with Us, Please use another email account or contact us.</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="viewPassport">View Passport</string>


</resources>
