<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/rn_help_header_style"
            android:drawableLeft="@drawable/ic_face"
            android:text="@string/firstname" />

        <TextView
            style="@style/rn_help_value_style"
            android:text="Harish" />
        <TextView
            style="@style/rn_help_header_style"
            android:drawableLeft="@drawable/ic_face"
            android:text="@string/lastname" />

        <TextView
            style="@style/rn_help_value_style"
            android:text="Rawat" />
        <TextView
            style="@style/rn_help_header_style"
            android:drawableLeft="@drawable/ic_user"
            android:text="@string/username" />

        <TextView
            style="@style/rn_help_value_style"
            android:text="Harry" />



        <TextView
            style="@style/rn_help_header_style"
            android:drawableLeft="@drawable/ic_emai"
            android:text="@string/email" />

        <TextView
            style="@style/rn_help_value_style"
            android:autoLink="email"
            android:text="h.rawtdelhi@gmail.com" />


        <TextView
            style="@style/rn_help_header_style"
            android:drawableLeft="@drawable/trip_white"
            android:text="Travel Id" />

        <TextView
            style="@style/rn_help_value_style"
            android:text="09876" />


    </LinearLayout>

</LinearLayout>