<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/pkg_bg"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColorHint="@color/accent"
        android:background="@drawable/top_rounded_rect"
        >

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editHeight"
            android:hint="@string/oldPassword"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColorHint="@color/accent"
        android:background="@drawable/top_rounded_rect">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editHeight"
            android:hint="@string/newPassword"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColorHint="@color/accent"
        android:background="@drawable/top_rounded_rect">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editHeight"
            android:hint="@string/confirmPassword"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/changePassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/primary_dark"
        android:text="@string/chnagePassword"
        android:textColor="@color/white" />


</LinearLayout>