<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="6dp"
        app:srcCompat="@drawable/login_logo" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editHeight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/top_rounded_rect"
        android:hint="@string/login_name"
        android:elevation="6dp"
        android:paddingLeft="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editHeight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bottom_round_rect"
        android:elevation="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:elevation="6dp"
            android:text="@string/login"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"
            android:theme="@style/PrimaryFlatButton" />

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:elevation="6dp"
            android:text="@string/signup"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"
            android:theme="@style/PrimaryFlatButton" />
    </LinearLayout>


</LinearLayout>