<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/travel_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pkgOptionTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:background="@color/primary_dark"
        android:fontFamily="sans-serif"
        android:gravity="center|bottom"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="Heading"/>

    <TextView
        android:id="@+id/pkgSubtitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_marginBottom="5dp"
        android:background="@color/primary_dark"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="Sub-Heading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/itenary"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableTop="@drawable/ic_flight"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="clickEvent"
                android:paddingTop="30dp"
                android:text="@string/itinerary"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/tickets"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableTop="@drawable/ic_ticket_30"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="clickEvent"
                android:paddingTop="30dp"
                android:text="@string/ticket_details"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/helpline"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableTop="@drawable/ic_help_32_white"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="clickEvent"
                android:paddingTop="30dp"
                android:text="@string/rn_helpline"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/emergency"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableTop="@drawable/ic_emergency_contact_30"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="clickEvent"
                android:paddingTop="30dp"
                android:text="@string/emergency_contact"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/feedback"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_rect"
                android:drawableTop="@drawable/ic_feedback"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="clickEvent"
                android:paddingTop="30dp"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/boardingPass"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_rect"
                android:drawableTop="@drawable/ic_boarding_pass"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="clickEvent"
                android:paddingTop="30dp"
                android:text="@string/boardingPass"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/travelId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_dark"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="Travel Id : 09876"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
